--- a/activity.html
+++ b/activity.html
@@ -5,7 +5,7 @@
 <article id="2015-ml30">
   <div class="cell-image">
     <a href="image/activities/MoS2.tif" class="image thumb-big">
-      <img src="image/activities/ITA.jpg"
+      <img src="image/activities/MoS2.tif"
            alt="The MoS2 grow on CuNi foam，forming a completely different shape compared with nanosheet array on FeNi foam" />
     </a>
   </div>
