--- a/activity.html
+++ b/activity.html
@@ -4,8 +4,8 @@
 
 <article id="2015-ml30">
   <div class="cell-image">
-    <a href="image/activities/MoS2.tif" class="image thumb-big">
-      <img src="image/activities/MoS2.tif"
+    <a href="image/activities/MoS2.png" class="image thumb-big">
+      <img src="image/activities/MoS2.png"
            alt="The MoS2 grow on CuNi foam，forming a completely different shape compared with nanosheet array on FeNi foam" />
     </a>
   </div>
