--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a class="go-home" href="?">Home</a></li>
             <li><a class="go-about" href="?about">CV</a></li>
-            <li><a class="go-activity" href="?activity">Activities</a></li>
+            <li><a class="go-projects" href="?projects">Projects</a></li>
             <li><a class="go-publication" href="?publication">Publications</a></li>
           </ul>
         </div><!--/.nav-collapse -->
