--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a class="go-home" href="?">Home</a></li>
+            <li class="active"><a class="go-home" href="?home">Home</a></li>
             <li><a class="go-about" href="?about">CV</a></li>
             <li><a class="go-activity" href="?activity">Projects</a></li>
             <li><a class="go-publication" href="?publication">Publications</a></li>
