--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <section>
   <p>
     <br />
-    <a href="doc/CV-2020-08-07.pdf" target="_blank">Download pdf version</a>
+    <a href="doc/CV-2020-10-05.pdf" target="_blank">Download pdf version</a>
   </p>
 </section>
 
@@ -23,18 +23,19 @@
 <section>
   <h1>Research Experience(details in Projects page)</h1>  
   <ul>
-    <li>
-      <b>Self-Supported Electrocatalyst Design for Water Splitting, NRR and CO2RR</b>, Shanghai Jiao Tong University,<i>Research Assistant</i>                 Nov 2018 - now<br />
-      Advisor:Jianbo Wu, Associate Professor at School of Materials Science and Engineering, Shanghai Jiao Tong University<br />
-      - Grew MoS<sub>2</sub> nanosheet on CuNi/CoNi/FeNi foam by CVD method to study the role of substrates in catalysis, whilie CuNi@MoS<sub>2</sub> has an overpotential of 180mV@10mA/cm<sup>2</sup> for HER in 1M KOH<br />
-      - Grew NiOOH nanosheet arrays on the base of the Ni wire array by hydrothermal method and electroxidation method, showing an overpotential of 184mV@10mA/cm<sup>2</sup> for OER in 1M KOH<br />
-      - Grew ZnO@ZnS core-shell nanoarray structure on Zn foil for electrochemical reduction of CO<sub>2</sub> to CO and H<sub>2</sub>><br />
-      - Synthesis of Ni SAC supported on MOF array structure for NRR<br />
-    </li>
+      <li>
+          <b>Self-Supported Electrocatalyst Design for Water Splitting and CO2RR</b>, Shanghai Jiao Tong University,<i>Research Assistant</i>                 Nov 2018 - now<br />
+          Advisor:Jianbo Wu, Associate Professor at School of Materials Science and Engineering, Shanghai Jiao Tong University<br />
+          - Grew MoS<sub>2</sub> nanosheet on CuNi/CoNi/FeNi foam by CVD method to study the role of substrates in catalysis, whilie CuNi@MoS<sub>2</sub> has an overpotential of 180mV@10mA/cm<sup>2</sup> for HER in 1M KOH<br />
+          - Grew NiOOH nanosheet arrays on the base of the Ni wire array by hydrothermal method and electroxidation method, showing an overpotential of 184mV@10mA/cm<sup>2</sup> for OER in 1M KOH<br />
+          - Grew ZnO@ZnS core-shell nanoarray structure on Zn foil for electrochemical reduction of CO<sub>2</sub> to CO and H<sub>2</sub>><br />
+          - Synthesized ZnCu-NC derived from ZIF-8 for CO<sub>2</sub>RR, with a high FE efficiency of 96% and investigated the promotionfunction of MOF structure on CO<sub>2</sub>RR<br />
+      </li>
     <li>
       <b>Cation effect on NRR and HER</b>, University of Illinois at Urbana-Champaign,<i>Summer Intern</i>                                                 July 2019-Oct 2019<br />
       Advisor: Yingjie Zhang, Assistant Professor at Departement of Materials Science and Engineering,UIUC<br />
-      - Investigated the cation effect of ionic liquid, like BMIMCl, and EMIMCl on NRR and HER   
+      - Investigated the cation effect of ionic liquid, like BMIMCl, and EMIMCl on NRR and HER 
+      - Set up the NRR test procedure primarily in the lab 
     </li>
     <li>
       <b>Radiative-cooling materials Design</b>,Shanghai Jiao Tong University, <i>Research Assistant</i>                                                    Oct 2017-Dec 2018<br />
@@ -88,22 +89,6 @@
 </section>
 -->
 
-<section>
-  <h1>Acivities</h1>  
-  <ul>
-    <!--
-    <li>
-      <b>Substitute Military Service</b>, <i>Yunlin, Taiwan</i>, Oct. 2015 - Oct. 2016 <br />
-      - Mandatory military service in Taiwan. <br />
-    </li>
-    -->
-    <li>
-      <b>Special Olympics in Shanghai for disabled chillren</b>                                                                                             Oct 2018-Nov 2018 <br />
-      - Facilitated the kids with mental illness to finish the training for the competion once a week until the final competion. <br />
-    </li>
-   
-  </ul>
-</section>
 
 <section>
   <h1>Awards</h1>  
@@ -125,6 +110,6 @@
   <ul>
     <li>Programming Languages:  C/C++, Matlab</li>
     <li>Experiment Skills: Common chemical synthesis method(Hydrothermal&CVD&electrodeposition), Electrochemcial test skills(ORR,OER,HER,CO2RR,NRR), FDTD simulation</li>
-    <li>TOEFL iBT: <b>92/120</b> </li>
+    <li>TOEFL iBT: <b>98/120</b> </li>
   </ul>
 </section>
