--- a/activity.html
+++ b/activity.html
@@ -1,55 +1,88 @@
 <section>
-<h1>Projects</h1>
-<h3>Please click the image to see the details (and more figures).</h3>
+    <h1>Projects</h1>
+    <h3>Please click the image to see the details (and more figures).</h3>
 
-<article id="2015-ml30">
-  <div class="cell-image">
-    <a href="image/activities/MoS2.png" class="image thumb-big">
-      <img src="image/activities/MoS2.png"
-           alt="The MoS2 grow on CuNi foam" />
-    </a>
-  </div>
-  <div class="cell-text-photo">
-    <h3>MoS2 array growth(unfinished-to be solved as graduation project)</h3>
-    <p> In this project I mainly focus on the following points:
-        <li>Using CVD method to grow MoS2 on the substrates using the S powder and MoO3 powder.<br /> 
-           - Cu mesh,Cu foam,CuNi foam, FeNi foam, CoNi foam are selected to sevre as susbtrates<br />
-        <li>Pursuing high HER activity, which means low overpotential<br /> 
-           - Among the substrates, CuNi foam shows the best performance of overpotential of 180mV<br />
-        <li>Trying to find the role of substrates play in the catalysts<br /> 
-           - The interface of transitional metal sulfides may have a promoting effect of the catalysts<br /> 
-        
-    </p>
-  </div>
-</article>
+    <article id="2015-ml30">
+        <div class="cell-image">
+            <a href="image/activities/MoS2.png" class="image thumb-big">
+                <img src="image/activities/MoS2.png"
+                     alt="The MoS2 grow on CuNi foam" />
+            </a>
+        </div>
+        <div class="cell-text-photo">
+            <h3>MoS2 array growth</h3>
+            <li><a class="go-MoS2" href="?MoS2">MoS2 array growth</a></li>
+            <p>
+                In this project I mainly focus on the following points:
+                <li>
+                    Using CVD method to grow MoS2 on the substrates using the S powder and MoO3 powder.<br />
+                    - Cu mesh,Cu foam,CuNi foam, FeNi foam, CoNi foam are selected to sevre as susbtrates<br />
+                <li>
+                    Pursuing high HER activity, which means low overpotential<br />
+                    - Among the substrates, CuNi foam shows the best performance of overpotential of 180mV<br />
+                <li>
+                    Trying to find the role of substrates play in the catalysts<br />
+                    - The interface of transitional metal sulfides may have a promoting effect of the catalysts<br />
 
-<article id="2015-googleserve">
-  <div class="cell-image">
-    <a href="image/activities/NiOOH.bmp" class="image thumb-big">
-      <img src="image/activities/NiOOH.bmp"
-           alt="NiOOH nanosheet arrays grown on Ni nanoarrays. " />
-    </a>
-  </div>
-  <div class="cell-text-photo">
-    <h3>NiOOH nanoarrays for OER(to be submitted)</h3>
-    <p>In this project, on the base of the Ni nanoarray samples synthesized with the magnetic field assisted method, I mainly focused on using a mild method to oxidize the Ni nanoarrays, to grow a 2D-nanosheet arrays on Ni nanowires.  So this heterostructure could show superior OER activity of 184mV@10mA/cm<sup>2</sup> for OER in 1M KOH compared with other similar catalysts.</p>
+            </p>
+        </div>
+    </article>
 
-  
-  </div>
-</article>
+    <article id="2019-ml30">
+        <div class="cell-image">
+            <a href="image/activities/NRR.png" class="image thumb-big">
+                <img src="image/activities/NRR.png"
+                     alt="The NRR test system" />
+            </a>
+        </div>
+        <div class="cell-text-photo">
+            <h3>Cation effect of Ionic Liquid on NRR and HER</h3>
+            <li><a class="go-NRR" href="?NRR">Cation effect of Ionic Liquid on NRR and HER</a></li>
+            <p>
+                In this project I mainly focused on the following points:
+                <li>
+                    Doing research on NRR test experiment, and set up the H-cell for eNRR test. <br />
+                    - Guarentee the gas tightness for the H-cell, and do NH3 products detection. <br />
+                <li>
+                    Exploring the cation effect on the NH3 FE for NRR, and overpotential for HER<br />
+                    - Adding IL into the electrolyte, then do electrochemical test to find the influence<br />
+                <li>
+                    Further work about EXAF and in-situ IR is followed by Postdoc Shan Zhou<br />
+                  
 
-<article id="2008-aiesec-wncf">
-  <div class="cell-image">
-    <a href="image/activities/Thermal.png" class="image thumb-big">
-      <img src="image/activities/Thermal.png"
-           alt="The simulated photonic cooler." />
-    </a>
-  </div>
-  <div class="cell-text-photo">
-      <h3>Solar Cell Photonic Cooler Design with 1D and 2D Combined Photonic Crystals via Passband Broadening(to be submitted)</h3>
-      <p>We proposed a new photonic cooler design for solar cells, by simultaneously reducing the absorption of the impractical sunlight and enhancing the thermal radiation of solar cells. The photonic cooler combines a 1D photonic crystal and a 2D photonic crystal, for both solar radiation reflection and radiative cooling. The 2D photonic crystal fill the undesired gap of 1D photonic crystal by changing the incident wave vector, thus broadening the passband. The optical performance and cooling effect of the photonic cooler are theoretically analyzed, showing a 2.9K temperature decrease on mid-IR absorptive solar cells, and 10.1K temperature decrease on mid-IR transparent solar cells. </p>
-  </div>
-</article>
+            </p>
+        </div>
+    </article>
+
+    <article id="2015-googleserve">
+        <div class="cell-image">
+            <a href="image/activities/NiOOH.bmp" class="image thumb-big">
+                <img src="image/activities/NiOOH.bmp"
+                     alt="NiOOH nanosheet arrays grown on Ni nanoarrays. " />
+            </a>
+        </div>
+        <div class="cell-text-photo">
+            <h3>NiOOH nanoarrays for OER(to be submitted)</h3>
+
+            <p>In this project, on the base of the Ni nanoarray samples synthesized with the magnetic field assisted method, I mainly focused on using a mild method to oxidize the Ni nanoarrays, to grow a 2D-nanosheet arrays on Ni nanowires.  So this heterostructure could show superior OER activity of 184mV@10mA/cm<sup>2</sup> for OER in 1M KOH compared with other similar catalysts.</p>
+
+
+        </div>
+    </article>
+
+    <article id="2008-aiesec-wncf">
+        <div class="cell-image">
+            <a href="image/activities/Thermal.png" class="image thumb-big">
+                <img src="image/activities/Thermal.png"
+                     alt="The simulated photonic cooler." />
+            </a>
+        </div>
+        <div class="cell-text-photo">
+            <h3>Solar Cell Photonic Cooler Design with 1D and 2D Combined Photonic Crystals via Passband Broadening(submitted)</h3>
+            li><a class="go-Thermal" href="?Thermal">Solar Cell Photonic Cooler Design with 1D and 2D Combined Photonic Crystals via Passband Broadening(submitted)</a></li>
+            <p>We proposed a new photonic cooler design for solar cells, by simultaneously reducing the absorption of the impractical sunlight and enhancing the thermal radiation of solar cells. The photonic cooler combines a 1D photonic crystal and a 2D photonic crystal, for both solar radiation reflection and radiative cooling. The 2D photonic crystal fill the undesired gap of 1D photonic crystal by changing the incident wave vector, thus broadening the passband. The optical performance and cooling effect of the photonic cooler are theoretically analyzed, showing a 2.9K temperature decrease on mid-IR absorptive solar cells, and 10.1K temperature decrease on mid-IR transparent solar cells. </p>
+        </div>
+    </article>
 
 
 
