--- a/publication.html
+++ b/publication.html
@@ -8,6 +8,13 @@
             Qian Xiang<sup>1</sup>, Jiale Wang<sup>1</sup>, <u>Qiushi Miao<sup>1</sup></u>,et al.<br />
             to be submitted to <i> Micro Today Nano</i>
         </li>
+       
+        <li>
+            <b>Nickel hydroxide nanosheets deposited on Nickel nanowire arrays for high performance towards Oxygen Evolution Reaction </b>.
+            <br />
+            Qiushi Miao<sup>1</sup>,et al.<br />
+            to be submitted
+        </li>
         <li>
             <b>Heterostructured Catalyst with Highly Enhanced Edge Surface for Efficient CO<sub>2</sub> Electrochemical Reduction to CO</b>.
             <br />
