--- a/NRR.html
+++ b/NRR.html
@@ -2,8 +2,8 @@
 <section>
     <article id="2015-ml30">
         <div class="cell-image">
-            <a href="image/activities/NRR.png" class="image thumb-big">
-                <img src="image/activities/NRR.png"
+            <a href="image/activities/NRR.jpg" class="image thumb-big">
+                <img src="image/activities/NRR.jpg"
                      alt="NRR test set-up" />
             </a>
         </div>
