--- a/activity.html
+++ b/activity.html
@@ -30,8 +30,8 @@
 
     <article id="2019-ml30">
         <div class="cell-image">
-            <a href="image/activities/NRR.png" class="image thumb-big">
-                <img src="image/activities/NRR.png"
+            <a href="image/activities/NRR.jpg" class="image thumb-big">
+                <img src="image/activities/NRR.jpg"
                      alt="The NRR test system" />
             </a>
         </div>
