--- a/activity.html
+++ b/activity.html
@@ -10,8 +10,8 @@
             </a>
         </div>
         <div class="cell-text-photo">
-            <h3>MoS2 array growth</h3>
-            <li><a class="go-MoS2" href="?MoS2">MoS2 array growth</a></li>
+   
+           <h3> <a class="go-MoS2" href="?MoS2">MoS2 array growth</a></h3>
             <p>
                 In this project I mainly focus on the following points:
                 <li>
@@ -36,8 +36,7 @@
             </a>
         </div>
         <div class="cell-text-photo">
-            <h3>Cation effect of Ionic Liquid on NRR and HER</h3>
-            <li><a class="go-NRR" href="?NRR">Cation effect of Ionic Liquid on NRR and HER</a></li>
+          <h3><a class="go-NRR" href="?NRR">Cation effect of Ionic Liquid on NRR and HER</a></h3>
             <p>
                 In this project I mainly focused on the following points:
                 <li>
@@ -78,8 +77,8 @@
             </a>
         </div>
         <div class="cell-text-photo">
-            <h3>Solar Cell Photonic Cooler Design with 1D and 2D Combined Photonic Crystals via Passband Broadening(submitted)</h3>
-            li><a class="go-Thermal" href="?Thermal">Solar Cell Photonic Cooler Design with 1D and 2D Combined Photonic Crystals via Passband Broadening(submitted)</a></li>
+            
+            <h3><a class="go-Thermal" href="?Thermal">Solar Cell Photonic Cooler Design with 1D and 2D Combined Photonic Crystals via Passband Broadening(submitted)</a></h3>
             <p>We proposed a new photonic cooler design for solar cells, by simultaneously reducing the absorption of the impractical sunlight and enhancing the thermal radiation of solar cells. The photonic cooler combines a 1D photonic crystal and a 2D photonic crystal, for both solar radiation reflection and radiative cooling. The 2D photonic crystal fill the undesired gap of 1D photonic crystal by changing the incident wave vector, thus broadening the passband. The optical performance and cooling effect of the photonic cooler are theoretically analyzed, showing a 2.9K temperature decrease on mid-IR absorptive solar cells, and 10.1K temperature decrease on mid-IR transparent solar cells. </p>
         </div>
     </article>
