--- a/activity.html
+++ b/activity.html
@@ -11,7 +11,8 @@
         </div>
         <div class="cell-text-photo">
    
-           <h3> <a class="go-MoS2" href="?MoS2">MoS2 array growth</a></h3>
+           <h3>MoS2 array growth</h3>
+            <li><a class="go-MoS2" href="?MoS2">click for more details</a></li>
             <p>
                 In this project I mainly focus on the following points:
                 <li>
