--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="?NRR">Qiu-Shi Miao</a>
+          <a class="navbar-brand" href="?home">Qiu-Shi Miao</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
