--- a/activity.html
+++ b/activity.html
@@ -12,7 +12,7 @@
         <div class="cell-text-photo">
    
            <h3>MoS2 array growth</h3>
-             <li><a class="go-MoS2" href="?MoS2">MoS2 array growth</a></li>
+             <li><a class="go-MoS2" href="?MoS2">click for more details</a></li>
            
             <p>
                 In this project I mainly focus on the following points:
