--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
           Advisor:Jianbo Wu, Associate Professor at School of Materials Science and Engineering, Shanghai Jiao Tong University<br />
           - Grew MoS<sub>2</sub> nanosheet on CuNi/CoNi/FeNi foam by CVD method to study the role of substrates in catalysis, whilie CuNi@MoS<sub>2</sub> has an overpotential of 180mV@10mA/cm<sup>2</sup> for HER in 1M KOH<br />
           - Grew NiOOH nanosheet arrays on the base of the Ni wire array by hydrothermal method and electroxidation method, showing an overpotential of 184mV@10mA/cm<sup>2</sup> for OER in 1M KOH<br />
-          - Grew ZnO@ZnS core-shell nanoarray structure on Zn foil for electrochemical reduction of CO<sub>2</sub> to CO and H<sub>2</sub>><br />
+          - Grew ZnO@ZnS core-shell nanoarray structure on Zn foil for electrochemical reduction of CO<sub>2</sub> to CO and H<sub>2</sub><br />
           - Synthesized ZnCu-NC derived from ZIF-8 for CO<sub>2</sub>RR, with a high FE efficiency of 96% and investigated the promotionfunction of MOF structure on CO<sub>2</sub>RR<br />
       </li>
     <li>
