--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <section>
   <p>
     <br />
-    <a href="doc/CV-2020-10-05.pdf" target="_blank">Download pdf version</a>
+    <a href="doc/CV-2020-10-14-2pages.pdf" target="_blank">Download pdf version</a>
   </p>
 </section>
 
@@ -110,6 +110,6 @@
   <ul>
     <li>Programming Languages:  C/C++, Matlab</li>
     <li>Experiment Skills: Common chemical synthesis method(Hydrothermal&CVD&electrodeposition), Electrochemcial test skills(ORR,OER,HER,CO2RR,NRR), FDTD simulation</li>
-    <li>TOEFL iBT: <b>98/120</b> </li>
+
   </ul>
 </section>
