--- a/publication.html
+++ b/publication.html
@@ -6,14 +6,14 @@
             <b>Recent Process in Self-supported Nanoarray Electrocatalysts for Water-splitting with Diverse Substrates </b>.
             <br />
             Qian Xiang<sup>1</sup>, Jiale Wang<sup>1</sup>, <u>Qiushi Miao<sup>1</sup></u>,et al.<br />
-            to be submitted to <i> Micro Today Nano</i>
+            to be submitted to <i> Materials Today Nano</i>
         </li>
        
         <li>
             <b>Nickel hydroxide nanosheets deposited on Nickel nanowire arrays for high performance towards Oxygen Evolution Reaction </b>.
             <br />
             Qiushi Miao<sup>1</sup>,et al.<br />
-            to be submitted
+            to be submitted to Journal of Materials Chemistry A
         </li>
         <li>
             <b>Heterostructured Catalyst with Highly Enhanced Edge Surface for Efficient CO<sub>2</sub> Electrochemical Reduction to CO</b>.
